Add home products

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="container-fluid">
   <div class="row mt-4 ml-1 mr-1">
-    <mat-card style="width: 100%;">
-      I am in home
-    </mat-card>
+    <mat-grid-list class="p-1" cols='{{ products.length }}' rowHeight="2:0.5" *ngFor='let product of products'>
+      <mat-card style="width: 100%;">
+        <mat-card-title>{{ product.name }}</mat-card-title>
+        <img mat-card-image src="http://localhost:3000/{{ product.images[0].url }}" height="200px" width="200px !important"  />
+        <mat-card-content class='text-success'>$ {{ product.price }}</mat-card-content>
+      </mat-card>
+    </mat-grid-list>
   </div>
 </div>
