Add login, sign-up page and also add spiner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,10 @@
       <a mat-list-item routerLink="/home">
         &nbsp;Logout
       </a>
-      <a mat-list-item routerLink="/home">
+      <a mat-list-item routerLink="/login">
         &nbsp;Sign In
       </a>
-      <a mat-list-item routerLink="/home">
+      <a mat-list-item routerLink="/sign_up">
         &nbsp;Sign Up
       </a>
       <mat-menu #userMenu="matMenu">
