--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -17,8 +17,8 @@
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let role">
               <mat-chip-list>
-                <mat-chip><mat-icon>create</mat-icon></mat-chip>
-                <mat-chip><mat-icon>delete</mat-icon></mat-chip>
+                <mat-chip class="text-info"><mat-icon>create</mat-icon></mat-chip>
+                <mat-chip class="text-danger"><mat-icon>delete</mat-icon></mat-chip>
               </mat-chip-list>
             </td>
           </ng-container>
