--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,8 @@
         &nbsp;Sign Up
       </a>
       <mat-menu #userMenu="matMenu">
-        <a mat-menu-item style="color: white"><mat-icon>chevron_right</mat-icon>&nbsp;Normal</a>
-        <a mat-menu-item style="color: white"><mat-icon>chevron_right</mat-icon>&nbsp;Admin</a>
+        <a mat-menu-item style="color: white" routerLink="/normal_users"><mat-icon>chevron_right</mat-icon>&nbsp;Normal</a>
+        <a mat-menu-item style="color: white" routerLink="/admin_users"><mat-icon>chevron_right</mat-icon>&nbsp;Admin</a>
       </mat-menu>
       <mat-menu #productMenu="matMenu">
         <a mat-menu-item style="color: white"><mat-icon>chevron_right</mat-icon>&nbsp;Brands</a>
