--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -1,7 +1,17 @@
 <div class="container-fluid">
   <div class="row mt-4 ml-1 mr-1">
     <mat-card style="width: 100%;">
-      <mat-card-title>Roles List</mat-card-title>
+      <mat-card-title style="display: flex;justify-content: space-between;">
+        Roles List
+        <mat-chip-list>
+          <mat-chip 
+            class="text-primary"
+            matTooltip="Add Role" 
+            matTooltipPosition="above"
+            (click) = "openDialog()"
+          ><mat-icon>add</mat-icon></mat-chip>
+        </mat-chip-list>
+      </mat-card-title>
       <mat-spinner class="spiner" [style.display]="displaySpiner ? 'block' : 'none'"></mat-spinner>
       <mat-card-content *ngIf="roles?.length > 0">
         <table mat-table [dataSource]="roles" style="width: 100%;" matSort matSortActive="id" matSortDirection="asc" matSortDisableClear>
@@ -17,8 +27,17 @@
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let role">
               <mat-chip-list>
-                <mat-chip class="text-info"><mat-icon>create</mat-icon></mat-chip>
-                <mat-chip class="text-danger"><mat-icon>delete</mat-icon></mat-chip>
+                <mat-chip class="text-info" matTooltip="Edit Role" matTooltipPosition="left"><mat-icon>create</mat-icon></mat-chip>
+                <mat-chip 
+                  class="text-danger"
+                  matTooltip="Remove Role"
+                  matTooltipPosition="right"
+                  mwlConfirmationPopover
+                  [popoverTitle]="popoverTitle"
+                  [popoverMessage]="popoverMessage"
+                  placement="left"
+                  (confirm)="destroy(role.id)"
+                  (cancel)="cancelClicked = true"><mat-icon>delete</mat-icon></mat-chip>
               </mat-chip-list>
             </td>
           </ng-container>
