--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                  <tr>
                    <td>
                      <mat-form-field style="width:100%;" class="example-full-width">
-                        <input matInput placeholder="Username" style="width:100%;" [(ngModel)]="username" name="username" required>
+                        <input matInput placeholder="Email" style="width:100%;" [(ngModel)]="email" name="email" required>
                      </mat-form-field>
                    </td>
                  </tr>
